feature:日常测试